--- a/index.html
+++ b/index.html
@@ -23,15 +23,15 @@
             </button>
             <div class="collapse navbar-collapse" id="navbarResponsive">
                 <ul class="navbar-nav ms-auto">
-                    <li class="nav-item mx-0 mx-lg-1"><a class="nav-link py-3 px-0 px-lg-3 rounded" href="#intro">Intro</a></li>
-                    <li class="nav-item mx-0 mx-lg-1"><a class="nav-link py-3 px-0 px-lg-3 rounded" href="#portfolio">Letters</a></li>
-                    <li class="nav-item mx-0 mx-lg-1"><a class="nav-link py-3 px-0 px-lg-3 rounded" href="#about">P.S.</a></li>
+                    <li class="nav-item mx-0 mx-lg-1"><a class="nav-link py-3 px-0 px-lg-3 rounded" href="#Intro">Intro</a></li>
+                    <li class="nav-item mx-0 mx-lg-1"><a class="nav-link py-3 px-0 px-lg-3 rounded" href="#Letters">Letters</a></li>
+                    <li class="nav-item mx-0 mx-lg-1"><a class="nav-link py-3 px-0 px-lg-3 rounded" href="#P.S.">P.S.</a></li>
                 </ul>
             </div>
         </div>
     </nav>
 
-    <header class="text-center text-white bg-primary masthead" id="intro">
+    <header class="text-center text-white bg-primary masthead" id="Intro">
         <div class="container">
             <img class="img-fluid d-block mx-auto mb-5" src="assets/img/Regrets%20(3).png" width="258" height="258">
             <h1>Hi Chamie!</h1>
@@ -50,7 +50,7 @@
             </h5>
         </div>
     </header>
-    <section id="portfolio" class="portfolio">
+    <section id="Letters" class="portfolio">
         <div class="container">
             <h2 class="text-uppercase text-center text-secondary">Letters</h2>
             <div class="text-center">
@@ -153,7 +153,7 @@
             </div>
         </div>
     </section>
-    <section class="text-white bg-primary masthead" id="about">
+    <section class="text-white bg-primary masthead" id="P.S.">
         <div class="container">
             <h2 class="text-uppercase text-center text-white">P.S</h2>
             <div class="star-light-hr">
