--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0, shrink-to-fit=no">
-    <title>Home - Brand</title>
+    <title>Letters for Chamie</title>
     <link rel="stylesheet" href="assets/bootstrap/css/bootstrap.min.css">
     <link rel="stylesheet" href="assets/css/Lato.css">
     <link rel="stylesheet" href="assets/css/Montserrat.css">
@@ -14,10 +14,10 @@
     <link rel="stylesheet" href="assets/css/untitled.css">
 </head>
 
-<body id="page-top" data-bs-spy="scroll" data-bs-target="#mainNav" data-bs-offset="72">
+<body id="Home" data-bs-spy="scroll" data-bs-target="#mainNav" data-bs-offset="72">
     <nav class="navbar navbar-expand-lg fixed-top text-uppercase navbar-light" id="mainNav">
         <div class="container">
-            <a class="navbar-brand" href="#page-top">LETTERS FOR YOU</a>
+            <a class="navbar-brand" href="#Home">LETTERS FOR YOU</a>
             <button data-bs-toggle="collapse" data-bs-target="#navbarResponsive" class="navbar-toggler text-white bg-primary navbar-toggler-right text-uppercase rounded" aria-controls="navbarResponsive" aria-expanded="false" aria-label="Toggle navigation">
                 <i class="fa fa-bars"></i>
             </button>
@@ -40,14 +40,15 @@
                 <div class="star-icon">★</div>
                 <hr class="line-right" />
             </div>
-            <h5 class="font-weight-light mb-0" style="color: #2b3e4f;">
-                I hope you've been doing well. I know that I might be ruining your peace now that we haven't spoken to each other for a long time. 
+            <h5 class="font-weight-light mb-0" style="color: #2b3e4f;"">Can you read my letters to you?</h5>
+            <p class="font-weight-light mb-0" style="color: #2b3e4f;">
+                <br>I hope you've been doing well. I know that I might be ruining your peace now that we haven't spoken to each other for a long time. 
                 And I know things didn't end well the last time we talked.
                 
                 I still keep thinking about the things that happened and I realized a lot of stuff. I decided to write all of the things I want to say to you instead. It's up to you if you want to read it.
                 
                 I just want you to know how I truly feel about you. Thank you for being such a great friend.
-            </h5>
+            </p>
         </div>
     </header>
     <section id="Letters" class="portfolio">
@@ -170,7 +171,7 @@
     <div class="text-center text-white copyright py-4">
         <div class="container" style="color: #2b3e4f;"><small>@Lost.</small></div>
     </div>
-    <div class="d-lg-none scroll-to-top position-fixed rounded"><a class="text-center d-block rounded text-white" href="#page-top"><i class="fa fa-chevron-up"></i></a></div>
+    <div class="d-lg-none scroll-to-top position-fixed rounded"><a class="text-center d-block rounded text-white" href="#Home"><i class="fa fa-chevron-up"></i></a></div>
     <div class="modal text-center" role="dialog" tabindex="-1" id="portfolio-modal-1">
         <div class="modal-dialog modal-lg" role="document">
             <div class="modal-content">
