--- a/index.html
+++ b/index.html
@@ -60,7 +60,7 @@
             <hr class="star-dark mb-5">
             <div class="row">
                 <div class="col-md-6 col-lg-4">
-                    <a class="d-block mx-auto portfolio-item" href="#portfolio-modal-1" data-modal="#portfolio-modal-1">
+                    <a class="d-block mx-auto portfolio-item" href="#portfolio-modal-1" data-bs-toggle="modal">
                         <div class="custom-envelope-wrapper">
                             <div class="wrapper">
                                 <div class="lid one"></div>
@@ -75,7 +75,7 @@
                     </a>
                 </div>
                 <div class="col-md-6 col-lg-4">
-                    <a class="d-block mx-auto portfolio-item" href="#portfolio-modal-2" data-modal="#portfolio-modal-2">
+                    <a class="d-block mx-auto portfolio-item" href="#portfolio-modal-2" data-bs-toggle="modal">
                         <div class="custom-envelope-wrapper">
                             <div class="wrapper">
                                 <div class="lid one"></div>
@@ -90,7 +90,7 @@
                     </a>
                 </div>   
                 <div class="col-md-6 col-lg-4">
-                    <a class="d-block mx-auto portfolio-item" href="#portfolio-modal-3" data-modal="#portfolio-modal-3">
+                    <a class="d-block mx-auto portfolio-item" href="#portfolio-modal-3" data-bs-toggle="modal">
                         <div class="custom-envelope-wrapper">
                             <div class="wrapper">
                                 <div class="lid one"></div>
@@ -106,7 +106,7 @@
                 </div>
                 <div class="row-spacer"></div>
                 <div class="col-md-6 col-lg-4">
-                    <a class="d-block mx-auto portfolio-item" href="#portfolio-modal-4" data-modal="#portfolio-modal-4">
+                    <a class="d-block mx-auto portfolio-item" href="#portfolio-modal-4" data-bs-toggle="modal">
                         <div class="custom-envelope-wrapper">
                             <div class="wrapper">
                                 <div class="lid one"></div>
@@ -121,7 +121,7 @@
                     </a>
                 </div>   
                 <div class="col-md-6 col-lg-4">
-                    <a class="d-block mx-auto portfolio-item" href="#portfolio-modal-5" data-modal="#portfolio-modal-5">
+                    <a class="d-block mx-auto portfolio-item" href="#portfolio-modal-5" data-bs-toggle="modal">
                         <div class="custom-envelope-wrapper">
                             <div class="wrapper">
                                 <div class="lid one"></div>
@@ -137,7 +137,7 @@
                 </div>
                            
                 <div class="col-md-6 col-lg-4">
-                    <a class="d-block mx-auto portfolio-item" href="#portfolio-modal-6" data-modal="#portfolio-modal-6">
+                    <a class="d-block mx-auto portfolio-item" href="#portfolio-modal-6" data-bs-toggle="modal">
                         <div class="custom-envelope-wrapper">
                             <div class="wrapper">
                                 <div class="lid one"></div>
